--- a/src/partials/settings.html
+++ b/src/partials/settings.html
@@ -96,9 +96,8 @@
                     <option value="Slide">Slide</option>
                     <option value="Fade">Fade</option>
                     <option value="Zoom">Zoom</option>
-                    <option value="TiltScroll">TiltScroll</option>
+                    <option value="TiltScroll">Tiltscroll</option>
                 </select>
-                <div class="help">TiltScroll takes a few seconds to become visible</div>
             </div>
 
             <label for="custom_css">Custom stylesheet</label>
