--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -52,14 +52,16 @@ textarea, input, select {
 
     .logo {
         font-size: 16px;
-        background: url(../img/logo-tf.png) no-repeat 20px 50%;
-        padding: 12px 0 12px 60px;
+        background: url(../img/logo-tf.png) no-repeat 0 50%;
+        padding: 12px 0 12px 40px;
+        margin-left: 20px;
         font-weight: 600;
         color: #fff;
         text-shadow: -1px -1px 0 rgba(0, 0, 0, .1);
         display: inline-block;
         vertical-align: middle;
         width: 144px;
+
 
         a:link, a:visited {
             color: #fff;
@@ -72,7 +74,7 @@ textarea, input, select {
         display: inline-block;
         vertical-align: middle;
         border-left: solid 1px #fff;
-        padding-left: 23px;
+        padding-left: 20px;
         text-align: center;
 
         img {
@@ -128,6 +130,22 @@ textarea, input, select {
             background: url(../img/fullscreen.png) no-repeat 50% 50%;
         }
     }
+
+    @media (max-width: 600px) {
+        .logo { margin-left: 10px; }
+        .logos {
+            position: absolute;
+            right: 10px;
+            top: 10px;
+            border: none;
+            padding: 0;
+
+            a {
+                margin: 0 0 0 10px;
+            }
+        }
+        .tools { display: none; }
+    }
 }
 
 
@@ -164,11 +182,12 @@ footer {
     overflow: hidden;
     color: #333;
     margin: 0 auto;
+    padding: 0 10px;
 
     a { color: #08C; }
 
     h1 {
-        font-size: 24px;
+        font-size: 23px;
         line-height: 1;
         font-weight: 600;
         margin: 24px 0;
@@ -350,22 +369,28 @@ footer {
     zoom: 1;
     color: #fff;
 
+    @media (max-width: 600px) {
+        padding: 10px;
+    }
+
     h1 {
         font-size: 20px;
-        line-height: 1.8;
+        line-height: 1;
+        margin-bottom: 10px;
         font-weight: 600;
     }
 
-    input[type=submit],
-    input[type=text] {
+    input {
         font-size: 30px;
         font-weight: normal;
         background: transparent;
         color: #fff;
         border: solid 2px #fff;
+        border: solid 2px rgba(255,255,255,.7);
         padding: 5px 10px;
+        max-width: 80%;
 
-        &::-webkit-input-placeholder { color: rgba(255,255,255,.5); }
+        &::-webkit-input-placeholder { color: rgba(255,255,255,.7); }
         &:-moz-placeholder { color: rgba(255,255,255,.5); }
     }
 
@@ -375,6 +400,11 @@ footer {
         border: solid 2px lighten(#80b43c, 20);
         background: #80b43c;
         cursor: pointer;
+    }
+
+    @media (max-width: 650px) {
+        input { font-size: 20px; }
+        input[type=text] { width: 50%; }
     }
 }
 
