new default settings: new colors!

--- a/src/partials/settings.html
+++ b/src/partials/settings.html
@@ -115,7 +115,7 @@
                     <option value="Arial, sans-serif">Arial</option>
                     <option value="Verdana, sans-serif">Verdana</option>
                     <option value="Helvetica, 'Helvetica Neue', Arial, sans-serif">Helvetica</option>
-                    <option value="Open Sans, sans-serif">Open Sans</option>
+                    <option value="'Open Sans', sans-serif">Open Sans</option>
                     <option value="Exo, sans-serif">Exo</option>
                     <option value="Imprima, sans-serif">Imprima</option>
                     <option value="Handlee, cursive">Handlee</option>
