--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -430,7 +430,7 @@ textarea, input, select {
     position: absolute;
     background: rgba(0, 0, 0, .33);
     color: #fff;
-    text-shadow: -1px -1px 0 rgba(0, 0, 0, .1);
+    //text-shadow: -1px -1px 0 rgba(0, 0, 0, .1);
     font-size: 17px;
 
     q {
