added 'compress' effect

--- a/src/partials/settings.html
+++ b/src/partials/settings.html
@@ -96,6 +96,7 @@
                     <option value="Slide">Slide</option>
                     <option value="Fade">Fade</option>
                     <option value="Zoom">Zoom</option>
+                    <option value="Compress">Compress</option>
                     <option value="TiltScroll">Tiltscroll</option>
                 </select>
             </div>
