There's now a pause button (in non-fullscreen mode). Made the animation rescheduling take the duration of the pause in account, so resuming should be faster.

--- a/src/partials/settings.html
+++ b/src/partials/settings.html
@@ -1,5 +1,5 @@
 <section id="settings">
-    <h1><a href="#" class="settings" title="Settings">Customize your stream</a></h1>
+    <h1 class="settings"><a href="#" title="Settings">Customize your stream</a></h1>
 
     <form action="#" id="settingsForm">
         <fieldset class="main">
