--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -131,6 +131,17 @@ textarea, input, select {
             margin-right: 12px;
         }
 
+        li.pause a {
+            background: url(../img/pause.png) no-repeat 50% 50%;
+            background-size: 24px 24px;
+            margin-right: 12px;
+        }
+
+        li.paused a {
+            background: url(../img/play.png) no-repeat 50% 50%;
+            background-size: 24px 24px;
+        }
+
         li.fullscreen a {
             background: url(../img/fullscreen.png) no-repeat 50% 50%;
             background-size: 24px 24px;
