Added new simple scroll effect

--- a/src/partials/settings.html
+++ b/src/partials/settings.html
@@ -97,6 +97,7 @@
                     <option value="Fade">Fade</option>
                     <option value="Zoom">Zoom</option>
                     <option value="Compress">Compress</option>
+                    <option value="Scroll">Scroll</option>
                     <option value="TiltScroll">Tiltscroll</option>
                 </select>
             </div>
