--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -8,6 +8,7 @@ html
         #link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.0.0/cerulean/bootstrap.min.css")
         #link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.0.0/cosmo/bootstrap.min.css")
         link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.0.0/united/bootstrap.min.css")
+        link(rel="stylesheeT", href="/css/transitions.css")
     body
         nav.navbar.navbar-inverse.navbar-fixed-top
                 .navbar-brand
