--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -3,111 +3,60 @@ html
     head
         title TwitterFontana
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css")
-        #link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.0.0/amelia/bootstrap.min.css")
-        #link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.0.0/cerulean/bootstrap.min.css")
-        #link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.0.0/cosmo/bootstrap.min.css")
-        link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootswatch/3.0.0/united/bootstrap.min.css")
-        link(rel="stylesheeT", href="/css/transitions.css")
+        link(rel="stylesheet", href="/bootstrap/css/bootstrap.min.css")
+        link(rel="stylesheet", href="/css/transitions.css")
+        link(rel="stylesheet", href="/css/demo.css")
     body
-        nav.navbar.navbar-inverse.navbar-fixed-top
+        nav.navbar.navbar-default.navbar-fixed-top
+            .navbar-header
+                button.navbar-toggle(type="button", data-toggle="collapse", data-target=".navbar-collapse")
+                    span.icon-bar
+                    span.icon-bar
+                    span.icon-bar
                 .navbar-brand
                     img(src="/img/logo.png", width="16", height="16", alt="")
                     | &nbsp;TwitterFontana
-                form#signin.navbar-right.hidden.navbar-form
-                    button.btn.btn-default(type="button")
-                        | Sign in with Twitter
-                #signout.navbar-right.hidden
-                    p.navbar-text(data-text="Hello {screen_name}")
-                    form.navbar-form.navbar-right
-                        button.btn.btn-default(type="button")
+            .collapse.navbar-collapse
+                #controls.navbar-left
+                    button.btn.btn-default.navbar-btn.settings(type="button")
+                        i.glyphicon.glyphicon-cog
+                    button.btn.btn-default.navbar-btn.pause-resume(type="button")
+                        i.glyphicon.glyphicon-pause
+                    button.btn.btn-default.navbar-btn.fullscreen(type="button")
+                        i.glyphicon.glyphicon-fullscreen
+                .navbar-right
+                    #signin.hidden
+                        button.btn.btn-default.navbar-btn(type="button")
+                            | Sign in with Twitter
+                        | &nbsp;
+                    #signout.hidden
+                        p.navbar-text(data-text="Hello {screen_name}")
+                        | &nbsp;
+                        button.btn.btn-default.navbar-btn(type="button")
                             | Sign out
-        .container.fontana.media-list
+                        | &nbsp;
 
-            #msg1.message.media.well
-                figure.pull-left.media-object
-                    img.avatar.img-thumbnail(src="/img/avatar.png", width="64", height="64", alt="")
-                .media-body
-                    p.media-heading
-                        cite
-                            span.name Tweet Fontana
-                            small.text-muted
-                                span.screen_name @tweetfontana
-                                span.time.pull-right Just now
-                    p.text.lead
-                        | Welcome to the brand new TwitterFontana! Completely revamped to work with Twitter's API v1.1
+        .fontana
+            - messages = []
+            - messages.push("Welcome to the brand new TwitterFontana! Completely revamped to work with Twitter's API v1.1")
+            - messages.push("Sign in with your Twitter account to search for Tweets!")
+            each message, i in messages
+                div.message.media.well.col-md-6.col-md-offset-3(id='msg'+i)
+                    figure.pull-left.media-object
+                        img.avatar.img-thumbnail(src="/img/avatar.png", width="64", height="64", alt="")
+                    .media-body
+                        .media-heading
+                            cite
+                                span.name Tweet Fontana
+                                small.text-muted
+                                    span.screen_name @tweetfontana
+                                    span.time.pull-right Just now
+                    .text.lead= message
 
-            #msg2.message.media.well
-                figure.pull-left.media-object
-                    img.avatar.img-thumbnail(src="/img/avatar.png", width="64", height="64", alt="")
-                .media-body
-                    p.media-heading
-                        cite
-                            span.name Tweet Fontana
-                            small.text-muted
-                                span.screen_name @tweetfontana
-                                span.time.pull-right Just now
-                    p.text.lead
-                        | TwitterFontana focuses on customizability and control, check out the display controls at the
-                        | bottom of the screen!
+        .progress.progress-striped.active
+            .progress-bar
 
-            #msg3.message.media.well
-                figure.pull-left.media-object
-                    img.avatar.img-thumbnail(src="/img/avatar.png", width="64", height="64", alt="")
-                .media-body
-                    p.media-heading
-                        cite
-                            span.name Tweet Fontana
-                            small.text-muted
-                                span.screen_name @tweetfontana
-                                span.time.pull-right Just now
-                    p.text.lead
-                        | To display your own timeline, or perform a Twitter search, start by signing in with your
-                        | Twitter account!
-
-        script(src="//code.jquery.com/jquery.js")
         script(src="/js/lib.min.js")
+        script(src="/bootstrap/js/bootstrap.min.js")
         script(src="/js/twitterfontana.min.js")
-
-        :coffee
-            $ ->
-                signIn = $("#signin")
-                signOut = $("#signout")
-                auth = new Fontana.TwitterAuth()
-                container = $(".fontana")
-
-                $('button', signIn).click ->
-                    auth.signIn(checkSession)
-                $('button', signOut).click ->
-                    auth.signOut(checkSession)
-
-                checkSession = ->
-                    auth.activeSession (data)->
-                        if (data)
-                            isSignedIn(data)
-                        else
-                            isSignedOut()
-
-                isSignedIn = (data)->
-                    userText = $(".navbar-text", signOut)
-                    userText.html(nano(userText.data("text"), data))
-                    signIn.addClass("hidden")
-                    signOut.removeClass("hidden")
-                    twitterFontana()
-
-                isSignedOut = ->
-                    signIn.removeClass("hidden")
-                    signOut.addClass("hidden")
-                    HTMLFontana()
-
-                twitterFontana = ->
-                    datasource = new Fontana.datasources.TwitterSearch("#FridayThe13th")
-                    visualizer = new Fontana.Visualizer(container, datasource)
-                    visualizer.start()
-
-                HTMLFontana = ->
-                    datasource = new Fontana.datasources.HTML(container)
-                    visualizer = new Fontana.Visualizer(container, datasource)
-                    visualizer.start()
-
-                checkSession()
+        script(src="/js/demo.min.js")
