--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -12,17 +12,19 @@ html
         meta(property="og:site_name", content="Twitter Fontana")
         meta(property="fb:admins", content="100000559554412")
         link.bootstrap(rel="stylesheet", href="/bootstrap/css/bootstrap.min.css")
+        link.bootswatch(rel="stylesheet", href="/css/fontana.css")
         link(rel="stylesheet", href="/css/transitions.css")
         link(rel="stylesheet", href="/css/demo.css")
     body
         nav.navbar.navbar-default.navbar-fixed-top
             .navbar-header
                 button.navbar-toggle(type="button", data-toggle="collapse", data-target=".navbar-collapse")
-                    span.icon-bar
-                    span.icon-bar
-                    span.icon-bar
+                    i.icon-bar
+                    i.icon-bar
+                    i.icon-bar
+                i.logo
                 .navbar-brand
-                    | TwitterFontana
+                    | Twitter Fontana
             .collapse.navbar-collapse
                 #controls.navbar-left
                     button.btn.btn-default.navbar-btn.settings(type="button")
@@ -35,17 +37,15 @@ html
                     #signin.hidden
                         button.btn.btn-default.navbar-btn(type="button")
                             | Sign in with Twitter
-                        | &nbsp;
                     #signout.hidden
                         p.navbar-text(data-text="Hello {screen_name}")
                         | &nbsp;
                         button.btn.btn-default.navbar-btn(type="button")
                             | Sign out
-                        | &nbsp;
 
         .fontana
             - messages = []
-            - messages.push("Welcome to the brand new TwitterFontana! Completely revamped to work with Twitter's API v1.1")
+            - messages.push("Welcome to the brand new Twitter Fontana! Completely revamped to work with Twitter's API v1.1")
             - messages.push("Click the cog icon for the settings menu and pick a different style or transition efect")
             - messages.push("Sign in with your Twitter account to enable Twitter search!")
             each message, i in messages
@@ -68,6 +68,7 @@ html
             div
                 a.eight(href="http://www.eight.nl/", title="Webdesign & Internet marketing in Arnhem", target="_blank")
                     span.sr-only Eight Media Internetbureau Arnhem
+                | &nbsp;
                 a.github(href="https://github.com/EightMedia/TwitterFontana", title="Fork Twitter Fontana on GitHub", target="_blank")
                     span.sr-only GitHub
             div
