Added more transitions

--- a/frontend/src/css/transitions.scss
+++ b/frontend/src/css/transitions.scss
@@ -1,3 +1,8 @@
-@import "transitions/scroll";
-@import "transitions/hinge";
+@import "transitions/compress";
+@import "transitions/fade";
 @import "transitions/lightspeed";
+@import "transitions/hinge";
+@import "transitions/scroll";
+@import "transitions/slide";
+@import "transitions/tilt";
+@import "transitions/zoom";
