--- a/frontend/src/css/transitions/_scroll.scss
+++ b/frontend/src/css/transitions/_scroll.scss
@@ -18,7 +18,11 @@
         @include transition-duration(1s);
         @include transition-timing-function(ease-in-out);
 
-        &.prev {
+        &.next {
+            top: 100%;
+        }
+
+        &.prev-one {
             top: 10%;
             opacity: .3;
             z-index: 1;
@@ -30,14 +34,10 @@
             z-index: 3;
         }
 
-        &.next {
+        &.next-one {
             top: 70%;
             opacity: .3;
             z-index: 2;
-        }
-
-        &.next + .message:not(.prev):not(.focus) {
-            top: 100%;
         }
     }
 }
@@ -60,7 +60,11 @@
           @include transition-duration(1s);
           @include transition-timing-function(ease-in-out);
 
-          &.prev {
+          &.next {
+              top: -10%;
+          }
+
+          &.prev-one {
               top: 70%;
               opacity: .3;
               z-index: 1;
@@ -72,14 +76,10 @@
               z-index: 3;
           }
 
-          &.next {
+          &.next-one {
               top: 10%;
               opacity: .3;
               z-index: 2;
-          }
-
-          &.next + .message:not(.prev):not(.focus) {
-              top: -10%;
           }
     }
 }
