--- a/frontend/src/css/transitions/_slide.scss
+++ b/frontend/src/css/transitions/_slide.scss
@@ -1,9 +1,6 @@
 @import "compass";
-@import "animate";
 
-@include animate-lightSpeed(in out);
-
-.lightspeed {
+.slide {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -13,17 +10,23 @@
 
     .message {
         -webkit-transform: translate3d(0, 0, 0);
-        opacity: 0;
         position: absolute;
         top: 35%;
+        opacity: 0;
+        @include transition-property(left opacity);
+        @include transition-duration(1.5s);
+
+        &.prev-one {
+            left: 25%;
+        }
 
         &.focus {
-            @include animation(lightSpeedIn .75s 1);
+            left: 0;
             opacity: 1;
         }
 
-        &.prev-one {
-            @include animation(lightSpeedOut .75s 1);
+        &.next-one {
+            left: -25%;
         }
     }
 }
