--- a/frontend/src/css/transitions/_zoom.scss
+++ b/frontend/src/css/transitions/_zoom.scss
@@ -1,9 +1,6 @@
 @import "compass";
-@import "animate";
 
-@include animate-lightSpeed(in out);
-
-.lightspeed {
+.zoom-in {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -13,17 +10,21 @@
 
     .message {
         -webkit-transform: translate3d(0, 0, 0);
-        opacity: 0;
         position: absolute;
         top: 35%;
+        opacity: 0;
+        @include transition-property(opacity transform);
+        @include transition-duration(1s);
+        @include transform(scale(0));
 
         &.focus {
-            @include animation(lightSpeedIn .75s 1);
             opacity: 1;
+            @include transform(scale(1));
         }
 
         &.prev-one {
-            @include animation(lightSpeedOut .75s 1);
+            @include transform(scale(100));
+            opacity: 0;
         }
     }
 }
