Added a close button to the logo/social block

--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -65,6 +65,7 @@ html
             .progress-bar
 
         #logos.well.well-sm
+            button.close(type="button") &times;
             div
                 a.eight(href="http://www.eight.nl/", title="Webdesign & Internet marketing in Arnhem", target="_blank")
                     span.sr-only Eight Media Internetbureau Arnhem
