Vertigo transition added

--- a/frontend/src/css/transitions.scss
+++ b/frontend/src/css/transitions.scss
@@ -5,4 +5,5 @@
 @import "transitions/scroll";
 @import "transitions/slide";
 @import "transitions/tilt";
+@import "transitions/vertigo";
 @import "transitions/zoom";
