--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -29,8 +29,10 @@ html
                 #controls.navbar-left
                     button.btn.btn-default.navbar-btn.settings(type="button")
                         i.glyphicon.glyphicon-cog
+                    | &nbsp;
                     button.btn.btn-default.navbar-btn.pause-resume(type="button")
                         i.glyphicon.glyphicon-pause
+                    | &nbsp;
                     button.btn.btn-default.navbar-btn.fullscreen(type="button")
                         i.glyphicon.glyphicon-fullscreen
                 .navbar-right
