--- a/frontend/src/css/demo.scss
+++ b/frontend/src/css/demo.scss
@@ -51,6 +51,7 @@ html, body {
     position: fixed;
     bottom: 0;
     z-index: 99;
+    margin: 0 0 15px 15px;
 
     .eight, .github {
         display: inline-block;
