--- a/frontend/src/css/demo.scss
+++ b/frontend/src/css/demo.scss
@@ -1,12 +1,14 @@
 @import "compass";
 
-.logo {
-    background: url('/img/logo.svg') no-repeat;
-    background-size: contain;
-    height: 32px;
-    width: 24px;
-    float: left;
-    margin: 10px -10px 0 10px;
+@font-face {
+	font-family: 'fontana';
+	src:url('../fonts/fontana.eot');
+	src:url('../fonts/fontana.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/fontana.woff') format('woff'),
+		url('../fonts/fontana.ttf') format('truetype'),
+		url('../fonts/fontana.svg#rws') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
 
 html, body {
@@ -47,25 +49,76 @@ html, body {
     opacity: 1;
 }
 
+.icon-play, .icon-pause, .icon-cog, .icon-expand, .icon-cancel, .icon-twitter, .icon-github-logo, .icon-fontana-logo, .icon-eight-logo {
+    font-family: 'fontana';
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    position: relative;
+    top: 1px;
+}
+.icon-play:before {
+    content: "\e000";
+}
+.icon-pause:before {
+    content: "\e001";
+}
+.icon-cog:before {
+    content: "\e002";
+}
+.icon-expand:before {
+    content: "\e003";
+}
+.icon-cancel:before {
+    content: "\e004";
+}
+.icon-twitter:before {
+    content: "\e005";
+}
+.icon-github-logo:before {
+    content: "\e006";
+}
+.icon-fontana-logo:before {
+    content: "\e007";
+}
+.icon-eight-logo:before {
+    content: "\e008";
+}
+
 #logos {
     position: fixed;
     bottom: 0;
+    right: 0;
     z-index: 99;
-    margin: 0 0 15px 15px;
+    margin: 0 15px 15px 0;
 
-    .eight, .github {
-        display: inline-block;
-        height: 32px;
-        background-size: contain;
-        background-repeat: no-repeat;
+    a {
+        text-decoration: none;
     }
-    .eight {
-        background-image: url('/img/eight.svg');
-        width: 32px;
+
+    .icon-eight-logo {
+        font-size: 72px;
+        position: absolute;
+        top: -9px;
     }
-    .github {
-        background-image: url('/img/github.svg');
-        width: 24px;
+    .icon-github-logo {
+        font-size: 27px;
+        margin: 0 5px 0 75px;
+        padding: 0 5px;
     }
 }
 
+.navbar {
+    .icon-fontana-logo {
+        position: absolute;
+        top: -5px;
+    }
+
+    .navbar-brand {
+        padding-left: 3em;
+    }
+}
