--- a/frontend/src/css/transitions/_hinge.scss
+++ b/frontend/src/css/transitions/_hinge.scss
@@ -18,6 +18,7 @@
         position: absolute;
         top: 35%;
         opacity: 1;
+        min-height: 14em;
 
         &.focus {
             display: block;
